Fixed design issues on mobile

--- a/frontend/styles/commands.css
+++ b/frontend/styles/commands.css
@@ -1,34 +1,3 @@
 #commands-resultslabel {
     margin-top: 0;
 }
-
-.lds-ring2 {
-    display: inline-block;
-    position: relative;
-    left: 50%;
-    transform: translate(-32px, -32px);
-    top: 50%;
-    width: 64px;
-    height: 64px;
-}
-.lds-ring2 div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid;
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: #fff transparent transparent;
-}
-.lds-ring2 div:nth-child(1) {
-    animation-delay: -0.45s;
-}
-.lds-ring2 div:nth-child(2) {
-    animation-delay: -0.3s;
-}
-.lds-ring2 div:nth-child(3) {
-    animation-delay: -0.15s;
-}
