--- a/frontend/styles/styles.css
+++ b/frontend/styles/styles.css
@@ -31,14 +31,14 @@ content-card {
 .center-text { text-align: center; }
 
 .center-fixed-width {
-    left: 50vw;
+    left: 50%;
     transform: translateX(-50%);
     position: fixed;
 }
 
 .center-fixed-full {
-    left: 50vw;
-    top: 50vh;
+    left: 50%;
+    top: 50%;
     position: fixed;
     transform: translate(-50%, -50%);
 }
@@ -112,6 +112,37 @@ content-card {
     bottom: 16px;
     width: 100%;
     max-width: 400px;
+}
+
+.lds-ring2 {
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    transform: translateX(-32px);
+    top: 50%;
+    width: 80px;
+    height: 80px;
+}
+.lds-ring2 div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent;
+}
+.lds-ring2 div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring2 div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+.lds-ring2 div:nth-child(3) {
+    animation-delay: -0.15s;
 }
 
 
